objects/Account_Revenue_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Revenue Forecasts</relationshipLabel>
        <relationshipName>Account_Revenue_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value__c</fullName>
        <label>Annual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_2016__c</fullName>
        <label>Apr 2016</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_2017__c</fullName>
        <label>Apr 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_2018_BE__c</fullName>
        <formula>Apr_2017__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apr 2018 BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_2018__c</fullName>
        <label>Apr 2018</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_2016_PE__c</fullName>
        <formula>Apr_2016__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>April 2016-PE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_2016_PE__c</fullName>
        <formula>Aug_2016__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aug 2016 PE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_2016__c</fullName>
        <label>Aug 2016</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_2017__c</fullName>
        <label>Aug 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_2018_BE__c</fullName>
        <formula>Aug_2017__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aug 2018 BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_2018__c</fullName>
        <label>Aug 2018</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BE_2016_PS_Best__c</fullName>
        <formula>Q1_Week__r.PS_Best__c + PS_Best__c + Q2_Week__r.PS_Best__c + Q4_Week__r.PS_Best__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BE 2016 PS Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BE_2016_PS_Land__c</fullName>
        <formula>Q1_Week__r.PS_Land__c + PS_Land__c + Q2_Week__r.PS_Land__c + Q4_Week__r.PS_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BE 2016 PS Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BE_2016_PS_Low__c</fullName>
        <formula>Q1_Week__r.PS_Low__c + PS_Low__c + Q2_Week__r.PS_Low__c + Q4_Week__r.PS_Low__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BE 2016 PS Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BE_2016_Subscription_Best__c</fullName>
        <formula>Q1_Week__r.Subscription_Best__c + Subscription_Best__c + Q2_Week__r.Subscription_Best__c + Q4_Week__r.Subscription_Best__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BE 2016 Subscription Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BE_2016_Subscription_Land__c</fullName>
        <formula>Q1_Week__r.Subscription_Land__c + Subscription_Land__c + Q2_Week__r.Subscription_Land__c + Q4_Week__r.Subscription_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BE 2016 Subscription Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BE_2016_Subscription_Low__c</fullName>
        <formula>Q1_Week__r.Subscription_Low__c + Subscription_Low__c + Q2_Week__r.Subscription_Low__c + Q4_Week__r.Subscription_Low__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BE 2016 Subscription Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BE_2016_Total_Land__c</fullName>
        <formula>Q1_Week__r.Total_Land__c + Total_Land__c + Q2_Week__r.Total_Land__c + Q4_Week__r.Total_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BE 2016 Total Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BE_2016_Total_Low__c</fullName>
        <formula>Q1_Week__r.Total_Low__c + Total_Low__c + Q2_Week__r.Total_Low__c + Q4_Week__r.Total_Low__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BE 2016 Total Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BE_EE_Flag_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BE/EE Flag 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BE_EE_Flag__c</fullName>
        <formula>Account__r.Cloud_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BE/EE Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BQ2_PS_Land__c</fullName>
        <label>zQ2_PS_Land__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BQ3_PS_Land__c</fullName>
        <label>zQ3_PS_Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BQ4_PS_Land__c</fullName>
        <label>zQ4_PS_Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Best_Change_Q1__c</fullName>
        <label>Best Change Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Best_Change_Q2__c</fullName>
        <label>Best Change Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Best_Change_Q3__c</fullName>
        <label>Best Change Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Best__c</fullName>
        <label>Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CLoud_Platform_Type_Formula__c</fullName>
        <formula>If(text(Subscription__r.Cloud_Platform_Type__c)==&apos;&apos;,text(Cloud_Platform_Type__c),text(Subscription__r.Cloud_Platform_Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLoud Platform Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Account_Owner_ID__c</fullName>
        <formula>IF( GS_Relationship__c != null, GS_Relationship__r.JBCXM__Account__r.CSM_Account_Owner__c , Account__r.CSM_Account_Owner__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSM Account Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Account_Owner__c</fullName>
        <formula>IF( GS_Relationship__c != null, GS_Relationship__r.JBCXM__Account__r.CSM_Account_Owner__r.FirstName &amp; &apos; &apos;&amp; GS_Relationship__r.JBCXM__Account__r.CSM_Account_Owner__r.LastName, Account__r.CSM_Account_Owner__r.FirstName &amp; &apos; &apos; &amp; Account__r.CSM_Account_Owner__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSM Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Owner__c</fullName>
        <formula>Account__r.CSM_Account_Owner__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSM Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Best__c</fullName>
        <formula>Best__c - Previous_Week_Best__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Land__c</fullName>
        <formula>Total_Land__c -Previous_Week__r.Total_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Low__c</fullName>
        <formula>Commit__c - Previous_Week_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_PS__c</fullName>
        <formula>PS_Land__c - Previous_Week__r.PS_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change PS Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Q1_2017_Subscription__c</fullName>
        <formula>Q1_2017_Land_Subscribe__c- Previous_Week__r.Q1_2017_Land_Subscribe__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Q1 2017 Subscription</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Q1_2017_Subscription_c__c</fullName>
        <formula>Change_Q1_2017_Subscription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change_Q1_2018_Subscription</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Q1_Land__c</fullName>
        <formula>Total_Q1_BE__c - Previous_Week__r.Total_Q1_BE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Q1 Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Q2_2017_Subscription__c</fullName>
        <formula>Q2_2017_Land_Subs__c- Previous_Week__r.Q2_2017_Land_Subs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Q2 2017 Subscription</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Q2_2018_Subscription_c__c</fullName>
        <formula>Change_Q2_2017_Subscription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change_Q2_2018_Subscription__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Q2_Land__c</fullName>
        <formula>Total_Q2_BE__c - Previous_Week__r.Total_Q2_BE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Q2 Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Q3_2017_Subscription__c</fullName>
        <formula>Q3_2017_Land_Subs__c- Previous_Week__r.Q3_2017_Land_Subs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Q3 2017 Subscription</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Q3_2018_Subscription_c__c</fullName>
        <formula>Change_Q3_2017_Subscription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change_Q3_2018_Subscription__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Q3_Land__c</fullName>
        <formula>Total_Q3_BE__c - Previous_Week__r.Total_Q3_BE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Q3 Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Subscription_Land__c</fullName>
        <formula>Q1_2017_Land_Subscribe__c - Previous_Week__r.Q1_2017_Land_Subscribe__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Subscription Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloned From</label>
        <referenceTo>Account_Revenue_Forecast__c</referenceTo>
        <relationshipLabel>Account Revenue Forecasts (Cloned From)</relationshipLabel>
        <relationshipName>Account_Revenue_Forecasts11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloud_Forecast_Quarter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloud Forecast Quarter</label>
        <referenceTo>Cloud_Forecast_Quarter__c</referenceTo>
        <relationshipLabel>Account Revenue Forecasts</relationshipLabel>
        <relationshipName>Account_Revenue_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloud_Platform_Type__c</fullName>
        <label>Cloud Platform Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PureEngage</fullName>
                </value>
                <value>
                    <fullName>ELC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comment Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commit__c</fullName>
        <label>Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_to_Go_Live__c</fullName>
        <formula>Go_Live_Date__c - Close_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Go Live</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Steady_State__c</fullName>
        <formula>Steady_State__c - Close_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Steady State</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_2016_PE__c</fullName>
        <formula>Dec_2016__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dec 2016 PE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_2016__c</fullName>
        <label>Dec 2016</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_2017__c</fullName>
        <label>Dec 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_2018_BE__c</fullName>
        <formula>Dec_2017__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dec 2018 BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_2018__c</fullName>
        <label>Dec 2018</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Indirect__c</fullName>
        <formula>&quot;Direct&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct/Indirect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feb_2016_PE__c</fullName>
        <formula>Feb_2016__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feb 2016 PE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_2016__c</fullName>
        <label>Feb 2016</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_2017__c</fullName>
        <label>Feb 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_2018_BE__c</fullName>
        <formula>Feb_2017__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feb 2018 BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_2018__c</fullName>
        <label>Feb 2018</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <label>Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GS_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GS Relationship</label>
        <referenceTo>JBCXM__GSRelationship__c</referenceTo>
        <relationshipLabel>Account Revenue Forecasts</relationshipLabel>
        <relationshipName>Account_Revenue_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_New_Logo__c</fullName>
        <label>Is New Logo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jan_2016_PE__c</fullName>
        <formula>Jan_2016__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan 2016-PE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_2016__c</fullName>
        <label>Jan 2016 Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_2017__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_2018_BE__c</fullName>
        <formula>Jan_2017__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan 2018 BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_2018__c</fullName>
        <label>Jan 2018</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul_2017_BE__c</fullName>
        <formula>July_2017__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jul 2018 BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_2016_PE__c</fullName>
        <formula>July_2016__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>July 2016 PE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_2016__c</fullName>
        <label>July 2016</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_2017__c</fullName>
        <label>July 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_2018__c</fullName>
        <label>July 2018</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun_2016_PE__c</fullName>
        <formula>June_2016__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jun 2016 PE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_2016__c</fullName>
        <label>June 2016</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_2017_BE__c</fullName>
        <formula>June_2017__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>June 2018 BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_2017__c</fullName>
        <label>June 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_2018__c</fullName>
        <label>June 2018</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOB1__c</fullName>
        <formula>IF(TEXT(LOB_O__c)&lt;&gt;&apos;&apos;,text(LOB_O__c),text(LOB__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_Formula__c</fullName>
        <formula>if( (  begins(text(LOB__c),&quot;A&quot;) || begins(text(LOB__c),&quot;B&quot;) || begins(text(LOB__c),&quot;C&quot;)  ) ,text(LOB__c),
if( begins(text(LOB__c),&quot;D&quot;),text(LOB__c),
if( begins(text(LOB__c),&quot;E&quot;),text(LOB__c) ,
text(LOB__c)

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_O__c</fullName>
        <label>LOB_O</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - In-Force Subscription</fullName>
                </value>
                <value>
                    <fullName>B - In-Force Sub Overage</fullName>
                </value>
                <value>
                    <fullName>C - In-Delivery Subscription</fullName>
                </value>
                <value>
                    <fullName>D - In-Force Telco</fullName>
                </value>
                <value>
                    <fullName>E - Telco Overage</fullName>
                </value>
                <value>
                    <fullName>F - In- Delivery Telco</fullName>
                </value>
                <value>
                    <fullName>G - TAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - Subscription</fullName>
                </value>
                <value>
                    <fullName>E- PureVoice</fullName>
                </value>
                <value>
                    <fullName>C - Professional Services</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>D - In-Force Telco</fullName>
                </value>
                <value>
                    <fullName>D-PureConnect Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOW_LOB__c</fullName>
        <formula>IF( text(LOB_O__c) =&apos;A - In-Force Subscription&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOW_LOB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Land_Change_Q1__c</fullName>
        <label>Land Change Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Land_Change_Q2__c</fullName>
        <label>Land Change Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Land_Change_Q3__c</fullName>
        <label>Land Change Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Land__c</fullName>
        <label>Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Low_Change_Q1__c</fullName>
        <label>Low Change Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Low_Change_Q2__c</fullName>
        <label>Low Change Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Low_Change_Q3__c</fullName>
        <label>Low Change Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manual_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Update?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mar_2016_PE__c</fullName>
        <formula>Mar_2016__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mar 2016 - PE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar_2016__c</fullName>
        <label>Mar 2016</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar_2017__c</fullName>
        <label>Mar 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar_2018_BE__c</fullName>
        <formula>Mar_2017__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mar 2018 BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar_2018__c</fullName>
        <label>Mar 2018</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_2016_PE__c</fullName>
        <formula>May_2016__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>May 2016 PE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_2016__c</fullName>
        <label>May 2016</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_2017__c</fullName>
        <label>May 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_2018_BE__c</fullName>
        <formula>May_2017__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>May 2018 BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_2018__c</fullName>
        <label>May 2018</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Logo_2016__c</fullName>
        <label>New Logo 2017</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes Signed</fullName>
                </value>
                <value>
                    <fullName>Yes Future Bookings</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Logo_2017__c</fullName>
        <formula>If(text(Subscription__r.New_Logo_2016__c) ==&apos;&apos;,text(New_Logo_2016__c),text(Subscription__r.New_Logo_2016__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Logo 2017</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nov_2016_PE__c</fullName>
        <formula>Nov_2016__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nov 2016 PE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_2016__c</fullName>
        <label>Nov 2016</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_2017__c</fullName>
        <label>Nov 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_2018_BE__c</fullName>
        <formula>Nov_2017__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nov 2018 BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_2018__c</fullName>
        <label>Nov 2018</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_2016_PE__c</fullName>
        <formula>Oct_2016__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oct 2016 PE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_2016__c</fullName>
        <label>Oct 2016</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_2017__c</fullName>
        <label>Oct 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_2018_BE__c</fullName>
        <formula>Oct_2017__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oct 2018 BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_2018__c</fullName>
        <label>Oct 2018</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <label>Offering Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PureEngage</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>PureConnect</fullName>
                </value>
                <value>
                    <fullName>Cloud Solution Partner (PPU)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PE_OB_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PE OB Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PE_SS_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PE SS Flag</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>